--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pyTelegramBotAPI
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
-requests
+pyTelegramBotAPI==4.13.0
+requests==2.31.0
+google-auth==2.19.0
+google-auth-oauthlib==1.0.0
+google-auth-httplib2==0.1.0
+google-api-python-client==2.87.0
+uuid==1.30
